--- a/lib/lifelog/evernote/content.erb
+++ b/lib/lifelog/evernote/content.erb
@@ -24,7 +24,7 @@
         <ul>
           <li><%= m['action'] %></li>
           <li><%= m['time'] %></li>
-          <li><%= m['distance'] %></li>
+          <li><%= m['distance'] %>km</li>
         </ul>
       <% end %>
     <% end %>
