--- a/lib/lifelog/evernote/content.erb
+++ b/lib/lifelog/evernote/content.erb
@@ -1,12 +1,14 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE en-note SYSTEM 'http://xml.evernote.com/pub/enml2.dtd'>
 <en-note>
-  <h1># Twitter</h1>
-  <ul>
-    <% @twitter.each do |t| %>
-      <li><%= t %></li>
-    <% end %>
-  </ul>
+  <% unless @twitter.nil? || @twitter.empty? %>
+    <h1># Twitter</h1>
+    <ul>
+      <% @twitter.each do |t| %>
+        <li><%= t.tweet %></li>
+      <% end %>
+    </ul>
+  <% end %>
 
   <h1># Hatena Bookmark</h1>
   <ul>
