add animetick updated at for screen

--- a/lib/lifelog/dom/entity/content.erb
+++ b/lib/lifelog/dom/entity/content.erb
@@ -95,7 +95,8 @@
         <tr>
           <td></td>
           <td></td>
-          <td colspan="2"><font color="5E5E5E"><%= a.sub_title %></font></td>
+          <td><font color="5E5E5E"><%= a.sub_title %></font></td>
+          <td><font color="5E5E5E"><%= a.updated_at_screen %></font></td>
         </tr>
       <% end %>
     <% end %>
