--- a/lib/everlog/dom/entity/content.erb
+++ b/lib/everlog/dom/entity/content.erb
@@ -3,7 +3,7 @@
 <en-note>
 
   <table border="0" cellspacing="0" cellpadding="9">
-    <% unless @weather.nil? || @weather.empty? %>
+    <% unless @weather.nil? %>
       <tr bgcolor="ffaa33">
         <td></td>
         <td><font size="+1" color="ffffff">Weather</font></td>
